--- a/style.css
+++ b/style.css
@@ -63,6 +63,7 @@ img {
   cursor: pointer;
   background-color: green;
   border: none;
+  border-radius: 20px;
   padding: 24px 36px;
   color: white;
   margin: 10px;
@@ -84,6 +85,7 @@ img {
   cursor: pointer;
   background-color: transparent;
   padding: 22px 34px;
+  border-radius: 20px;
 }
 
 /* Service */
