--- a/style.css
+++ b/style.css
@@ -4,6 +4,11 @@
     justify-content: center;
     padding-bottom: 40px;
   }
+
+  .hlogo{
+    align-items: center;
+  
+  }
   
   .nav {
     cursor: pointer;
@@ -79,7 +84,8 @@
     cursor: pointer;
     background-color: transparent;
     padding: 22px 34px;
-    border-radius: 5px; 
+    border-radius: 5px;
+    border:  2px solid rgb(128, 128, 128);
   }
   
   /* Service */
