--- a/style.css
+++ b/style.css
@@ -65,7 +65,7 @@
     border-radius: 5px; 
     padding: 24px 36px;
     color: white;
-    margin: 10px;
+    margin-bottom: 10px;
   }
   
   .btn1:hover{
