--- a/style.css
+++ b/style.css
@@ -22,7 +22,7 @@
     padding: 20px 10px 40px 80px;
   }
   
-  .nav ul li {
+  .nav ul, li {
     display: inline;
     padding: 10px 10px;
     color: orange;
@@ -164,7 +164,7 @@
     padding-left: 20px;
   }
     
-  .nav ul li {
+  .nav ul, li {
     display: flex;
     justify-content: center;
     padding-bottom: 0;
