--- a/style.css
+++ b/style.css
@@ -79,7 +79,7 @@
     background-color: transparent;
     padding: 22px 34px;
     border-radius: 5px;
-    border-color:  2px solid rgb(128, 128, 128);
+    border-color: rgb(105,105,105);
   }
   
   /* Service */
